drawing animal on page load

--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
 
 <body>
 
+  <header>
+    <h1 class="m-4">Animal <span class="text-danger">Murder</span> Mystery</h1>
+  </header>
+
+  <main>
+    <section class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <button class="btn btn-warning m-4">Accuse</button>
+        </div>
+        <div id="animalLineup" class="col-12 fs-1 text-center mt-3">
+        </div>
+      </div>
+    </section>
+  </main>
+
   <script src="app.js"></script>
 </body>
 
