--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
         <div class="col-12">
           <button class="btn btn-warning m-4">Accuse</button>
         </div>
-        <div id="animalLineup" class="col-12 fs-1 text-center mt-3">
+        <div class="col-12 text-center mt-3">
+          <h2>Suspect Lineup</h2>
+          <p id="suspectLineup" class="fs-1"></p>
+        </div>
+        <div class="col-12 text-center mt-3">
+          <h2>Victims</h2>
+          <p id="victimLineup" class="fs-1"></p>
         </div>
       </div>
     </section>
