first step of accuse

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="container-fluid">
       <div class="row">
         <div class="col-12">
-          <button class="btn btn-warning m-4">Accuse</button>
+          <button onclick="accuseAnimalOfMurder()" type="button" class="btn btn-warning m-4">Accuse</button>
         </div>
         <div class="col-12 text-center mt-3">
           <h2>Suspect Lineup</h2>
