--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
           <h2>Victims</h2>
           <p id="victimLineup" class="fs-1"></p>
         </div>
+        <div class="col-12 text-center mt-3">
+          <h3>Clues</h3>
+          <div id="murdererClues"></div>
+        </div>
       </div>
     </section>
   </main>
